--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,9 @@
     <string name="app_name">hugbv2</string>
     <string name="title_activity_login">Sign in</string>
 
+    <!-- String related to SearchActivity -->
+    <string name="login_button">Login</string>
+
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password (optional)</string>
