--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
 
     <!-- String related to SearchActivity -->
     <string name="login_button">Login</string>
+    <string name="search_button">Search</string>
 
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
@@ -20,4 +21,5 @@
     </string>
     <string name="title_activity_ingredients_list">IngredientsListActivity</string>
     <string name="action_add">Add Item</string>
+    <string name="title_activity_search">Recipe Search</string>
 </resources>
